--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -1,4 +1,7 @@
 all:
   hosts:
-    localhost:
-      ansible_connection: local
+    production:
+      ansible_host: 13.159.190.186 # <-- CHANGE THIS
+      ansible_user: ubuntu
+      ansible_ssh_private_key_file: /var/lib/jenkins/.ssh/id_rsa # <-- UPDATE THIS
+      ansible_python_interpreter: /usr/bin/python3
